# sound_anim

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  run.sh
.cache/clangd/index/: _fixes.hpp.CA49F098319D7284.idx  _vectorize.hpp.C5C56CDCB61D0F8F.idx  cocoa_init.m.0FE566A52219858F.idx  cocoa_init.m.36441D68ACB28F51.idx  cocoa_joystick.h.2FF2F0A500F5C178.idx  cocoa_joystick.h.8E13FBCF2C00BB48.idx  cocoa_joystick.m.792A39A2FD621EE3.idx  cocoa_joystick.m.C8DB81AA46FC96BF.idx  cocoa_monitor.m.6C07D43DE26DD2D7.idx  cocoa_monitor.m.C8C51D02B60FDF77.idx  cocoa_platform.h.6E0797DBB15F4CFB.idx  cocoa_platform.h.C7EDE3568F6F35A6.idx  cocoa_time.c.8C5050104FB2E286.idx  cocoa_time.c.958E314FD5187423.idx  cocoa_time.h.054AB822C7883721.idx  cocoa_time.h.1D150DD9D6147D0F.idx  cocoa_window.m.3C2EC8C4B3191AAC.idx  cocoa_window.m.EB59869C9D98B8A4.idx  common.hpp.F1E3325955A1F17A.idx  compute_common.hpp.16CB819EC0A18F20.idx  compute_vector_relational.hpp.A85464C2D8D9E768.idx  constants.hpp.BC1DF3B546A827E1.idx  constants.inl.CE8F336F17225AE6.idx  context.c.4F6E41D97437A501.idx  context.c.EA3C4973B29BC4BC.idx  dual_quaternion.hpp.A5018DC45C681652.idx  dual_quaternion.inl.D7E6730B8E3B6980.idx  egl_context.c.53DCC6DF15B37A39.idx  egl_context.c.54842664F3C1651E.idx  epsilon.hpp.B6D035C95D8319FF.idx  epsilon.inl.573CCC7C570AB78A.idx  exponential.hpp.9CEEDC7BFCF5340A.idx  func_common.inl.38C7DB15306F24DB.idx  (+223 more)
docs/: notes.md
src/: 6.1.fragment.fs  main.cpp  room.cpp  room.fs  room.hpp  room.vs  room_spkrs.cpp  room_vertices.hpp  shader_m.h  speaker_vertices.hpp  spkr.fs
src/init/: CMakeLists.txt
src/init/src/: init_opengl_binds.cc  init_routines.hh  init_window.cc  init_window_callbacks.cc
src/lib/: CMakeLists.txt  mesh.cc  mesh.hh  utils.hh
src/shaders/: CMakeLists.txt  shader.hh  shader_m.cc  shader_m.h  uniform.hh  wave_shader.hh  waves.fs  waves.vs
src/shaders/skybox/: skybox.cc  skybox.fs  skybox.hh  skybox.vs
src/shaders/waves/: wave_shader.cc  wave_shader.hh  waves.fs  waves.vs
src/speaker_points/: speaker_dbs.hpp  speaker_points.hpp
src/uniforms/: CMakeLists.txt
temp/: room.cpp
webgl/: SkyboxShader.js  WaveShader.js  index.html  main.js  package-lock.json  package.json  shader.frag  shader.vert  skybox.vert  waves.frag  waves.vert
(+2 files in other folders)
